[package]
name = "opensource_sast_verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
sarif_rust = "0.3.0"
serde_json = "1.0"
async-openai = { version = "0.33", features= ["full"]}
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tree-sitter = "0.26"
tree-sitter-python = "0.25"
